cambio de banner

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p {
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
     ) 
-    ,url(../fotos/pizzabanner.jpg);
+    ,url(../fotos/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
