--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Oswald', sans-serif; 
 }
 
 html {
@@ -14,34 +15,19 @@ body {
     min-height: 100vh;
 }
 
-.header {
-    background-color: red;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 75px;
-    padding: 5px 2%;
+.navbar-brand {
+    font-size: 1.5rem;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
 }
 
-.header .logo img {
-    height: 50px;
-    width: auto;
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255, 255, 255);
 }
 
-.header .nav-links {
-    list-style: none;
-}
-
-.header .nav-links li {
-    display: inline-block;
-    padding: 0 20px;
-}
-
-.header .nav-links a {
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-    
+.nav-item {
+    font-size: 1.3rem;
+    font-family: 'Oswald', sans-serif;
 }
 
 h1 { 
@@ -54,6 +40,10 @@ h2 {
 
 h3 {
     font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: 800;
+    line-height: 1.2;
 }
 
 p {
@@ -103,16 +93,6 @@ p {
     color: white;
 }
 
-#somos {
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 200px);  
-    grid-gap: 20px;
-    padding: 60px;
-}
-
 .texto {
     text-align: center;
 }
@@ -133,18 +113,6 @@ p {
     box-shadow: 2px 1px 5px black;
 }
 
-.comida-a {
-    background-image: url(./fotos/1.jpg);
-}
-
-.comida-b {
-    background-image: url(./fotos/2.jpg);
-}
-
-.comida-c {
-    background-image: url(./fotos/3.jpg);
-}
-
 /* -------------------------------------------------------------------------------- FIN INDEX ----------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------------- MENU ---------------------------------------------------------------------------- */
@@ -160,10 +128,9 @@ p {
 
 #carta {
     height: auto;
-    width: 100%;
-    display: grid;
-    justify-self: center;
-    align-self: center;
+    width: 100%;    
+    display: grid;    
+    justify-items: center;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 250px);  
     grid-gap: 20px;
@@ -172,18 +139,21 @@ p {
 
 #carta ul {
     list-style: none;
+    padding-left: 0;
     margin-top: 5px;
 }
 
 .menu {
     display: flex;
+    width: 75%;
+    max-width: 400px;
     flex-direction: column;
     text-align: center;    
     background-image: url(./fotos/fondo.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 5px;
-    -webkit-border-radius: 5px;
+    -webkit-border-radius: 5px; 
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
@@ -191,9 +161,8 @@ p {
     box-shadow: 5px 5px 5px black;
 }
 
-.bebidas {
-    display: flex;
-    margin-top: 10px;
+@media only screen and (min-width: 480px) {
+    
 }
 
 /* -------------------------------------------------------------------------------- FIN MENU ---------------------------------------------------------------------------- */
@@ -226,32 +195,3 @@ p {
 #form ul li {
     list-style: none;
 }
-
-
-
-footer {
-    background-color: gray;
-    text-align: center;
-    /* position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 46px; */
-}
-
-/* footer {
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-    height: 56px;
-}
-
-footer .conte {
-    background-color: gray;
-    display: flex;
-    justify-content: center;    
-}
-
-footer ul li {
-    list-style: none;
-} */
