--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
     font-weight: bold;
 }
 
+.navbar-brand:hover {
+    transition: all 0.8s ease-in-out;
+    color: rgb(243, 243, 141);
+    transform: scale(1.04);
+}
+
 .navbar-dark .navbar-nav .nav-link {
     color: rgba(255, 255, 255);
 }
@@ -28,6 +34,15 @@ body {
 .nav-item {
     font-size: 1.3rem;
     font-family: 'Oswald', sans-serif;
+}
+
+.nav-link:hover {
+    transition: all 0.8s ease-in-out;
+    transform: scale(1.07);
+    -webkit-transform: scale(1.07);
+    -moz-transform: scale(1.07);
+    -ms-transform: scale(1.07);
+    -o-transform: scale(1.07);
 }
 
 h1 { 
@@ -121,7 +136,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    text-decoration: underline;
+    font-weight: bold;
     width: 100%;
     height: 150px;
 }
@@ -134,8 +149,9 @@ p {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 250px);  
     grid-gap: 20px;
-    padding: 60px;
+    padding: 0px;
 }
+
 
 #carta ul {
     list-style: none;
@@ -161,9 +177,50 @@ p {
     box-shadow: 5px 5px 5px black;
 }
 
-@media only screen and (min-width: 480px) {
+
+
+@media only screen and (min-width: 768px) {
+    #carta {
+        height: auto;
+        width: 100%;    
+        display: grid;    
+        justify-items: center;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 250px);  
+        grid-gap: 40px;
+        padding: 0px;
+    }
     
+    .menu:hover {
+        transform: scale(1.10);
+        transition: all 0.7s ease-in-out;
+        -webkit-transition: all 0.7s ease-in-out;
+        -moz-transition: all 0.7s ease-in-out;
+        -ms-transition: all 0.7s ease-in-out;
+        -o-transition: all 0.7s ease-in-out;
+        -webkit-transform: scale(1.10);
+        -moz-transform: scale(1.10);
+        -ms-transform: scale(1.10);
+        -o-transform: scale(1.10);
+    }
+
+    .pizzas {
+        margin-left: 18%;
+    }
+
+    .bebidas {
+        margin-left: 18%;
+    }
+
+    .empanada {
+        margin-right: 18%;
+    }
+
+    .promos {
+        margin-right: 18%;
+    }
 }
+
 
 /* -------------------------------------------------------------------------------- FIN MENU ---------------------------------------------------------------------------- */
 
@@ -173,25 +230,9 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 7%;
 }
 
-#form {
-    height: auto;
-    width: 100%;
-    display: grid;
-    justify-self: center;
-    align-self: center;
-    justify-items: center;
-    grid-template-columns: 1fr;
-    grid-template-rows: 250px 
-}
-
-#form ul li button {
-    display: flex;
-    align-items: center;
-    border: 2px solid black;
-}
-
-#form ul li {
-    list-style: none;
+.comentario {
+    height: 250px;
 }
