--- a/style.css
+++ b/style.css
@@ -206,4 +206,28 @@ p {
 
 .comentario {
   height: 250px;
+}
+
+#galeria .col-lg-4 {
+  margin: 0;
+  padding: 25px;
+}
+
+#galeria img {
+  width: 100%;
+  height: 250px;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+}
+
+#galeria img:hover {
+  transition: all 0.8s ease-in-out;
+  transform: scale(1.07);
+  -webkit-transform: scale(1.07);
+  -moz-transform: scale(1.07);
+  -ms-transform: scale(1.07);
+  -o-transform: scale(1.07);
 }/*# sourceMappingURL=style.css.map */
