--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,1 @@
-@import "./sass/header", "./sass/body", "./sass/banner", "./sass/carousel", "./sass/menu", "./sass/formulario", "./sass/galeria";
+@import "./sass/mixins", "./sass/header", "./sass/body", "./sass/banner", "./sass/carousel", "./sass/menu", "./sass/formulario", "./sass/galeria", "./sass/historia";
