--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     text-align: center;
     height: 90vh;
-    color: white;
+    color: $color2;
     background-image: linear-gradient(
         0deg,
         rgba(0, 0, 0, 0.5),
@@ -17,24 +17,16 @@
     background-position: center center;
 }
 
-#hero a{
-    display: flex;
-    font-size: 1.5em;
-    font-weight: bold;
-    margin: 15px;
-    padding: 10px 20px;
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-    color: white;
-    background-color: red;
-}
-
-#hero a {
-    text-decoration: none;
-    color: white;
+#hero {
+    a {
+        display: flex;
+        font-size: 1.5em;
+        font-weight: bold;
+        margin: 15px;
+        padding: 10px 20px;        
+        color: $color2;
+        background-color: red;
+        text-decoration: none;
+        @include cajas;
+    }
 }
