--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -5,18 +5,25 @@
     font-family: 'Oswald', sans-serif; 
 }
 
+$color1: #808080;
+
+$color2: #FFFFFF;
+
+$color3: #000000;
+
 body {
     color: black;
     position: relative;
     min-height: 100vh;
+    background-color: rgba(208, 233, 232, 0.822);
 }
 
 h1 { 
-    font-size: 40px;
+    font-size: 50px;
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 40px;
 }
 
 h3 {
@@ -28,5 +35,5 @@ h3 {
 }
 
 p {
-    font-size: 15px;
+    font-size: 17px;
 }
