--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -19,10 +19,12 @@
 }
 
 
-#carta ul {
-    list-style: none;
-    padding-left: 0;
-    margin-top: 5px;
+#carta {
+    ul {
+        list-style: none;
+        padding-left: 0;
+        margin-top: 5px;
+    }
 }
 
 .menu {
@@ -34,16 +36,16 @@
     background-image: url(./fotos/fondo.jpg);
     background-position: center;
     background-size: cover;
-    border-radius: 5px;
-    -webkit-border-radius: 5px; 
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border: 2px solid black;
-    box-shadow: 5px 5px 5px black;
+    border: 2px solid $color3;
+    @include cajas;
 }
 
-
+.text-menu {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin: 4%;
+}
 
 @media only screen and (min-width: 768px) {
     #carta {
