--- a/style.css
+++ b/style.css
@@ -39,14 +39,15 @@ body {
   color: black;
   position: relative;
   min-height: 100vh;
+  background-color: rgba(208, 233, 232, 0.822);
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 50px;
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 40px;
 }
 
 h3 {
@@ -58,7 +59,7 @@ h3 {
 }
 
 p {
-  font-size: 15px;
+  font-size: 17px;
 }
 
 #hero {
@@ -68,7 +69,7 @@ p {
   justify-content: center;
   text-align: center;
   height: 90vh;
-  color: white;
+  color: #FFFFFF;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./fotos/pizzabanner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -81,20 +82,15 @@ p {
   font-weight: bold;
   margin: 15px;
   padding: 10px 20px;
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-  color: white;
+  color: #FFFFFF;
   background-color: red;
-}
-
-#hero a {
   text-decoration: none;
-  color: white;
+  box-shadow: 3px 3px 3px #808080;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
 }
 
 .texto {
@@ -109,12 +105,12 @@ p {
 .comida {
   background-size: cover;
   background-position: center;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-  box-shadow: 2px 1px 5px black;
+  box-shadow: 3px 3px 3px #808080;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
 }
 
 .h2-menu {
@@ -152,13 +148,20 @@ p {
   background-image: url(./fotos/fondo.jpg);
   background-position: center;
   background-size: cover;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border: 2px solid black;
-  box-shadow: 5px 5px 5px black;
+  border: 2px solid #000000;
+  box-shadow: 3px 3px 3px #808080;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+}
+
+.text-menu {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin: 4%;
 }
 
 @media only screen and (min-width: 768px) {
@@ -201,7 +204,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 7%;
+  margin: 4%;
 }
 
 .comentario {
@@ -216,6 +219,8 @@ p {
 #galeria img {
   width: 100%;
   height: 250px;
+  border: 2px solid #000000;
+  box-shadow: 3px 3px 3px #808080;
   border-radius: 7px;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
@@ -223,11 +228,23 @@ p {
   -o-border-radius: 7px;
 }
 
-#galeria img:hover {
-  transition: all 0.8s ease-in-out;
-  transform: scale(1.07);
-  -webkit-transform: scale(1.07);
-  -moz-transform: scale(1.07);
-  -ms-transform: scale(1.07);
-  -o-transform: scale(1.07);
+@media only screen and (min-width: 768px) {
+  #galeria img:hover {
+    transition: all 0.8s ease-in-out;
+    transform: scale(1.07);
+    -webkit-transform: scale(1.07);
+    -moz-transform: scale(1.07);
+    -ms-transform: scale(1.07);
+    -o-transform: scale(1.07);
+  }
+}
+#historia h2 {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin: 3%;
+}
+
+#historia img {
+  width: 90%;
 }/*# sourceMappingURL=style.css.map */
