--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -12,7 +12,7 @@ $color2: #FFFFFF;
 $color3: #000000;
 
 body {
-    color: black;
+    color: $color3;
     position: relative;
     min-height: 100vh;
     background-color: rgba(208, 233, 232, 0.822);
@@ -29,8 +29,7 @@ h2 {
 h3 {
     font-size: 30px;
     margin-top: 0;
-    margin-bottom: 0;
-    font-weight: 800;
+    margin-bottom: 0;    
     line-height: 1.2;
 }
 
