--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 }
 
 body {
-  color: black;
+  color: #000000;
   position: relative;
   min-height: 100vh;
   background-color: rgba(208, 233, 232, 0.822);
@@ -54,7 +54,6 @@ h3 {
   font-size: 30px;
   margin-top: 0;
   margin-bottom: 0;
-  font-weight: 800;
   line-height: 1.2;
 }
 
@@ -75,7 +74,6 @@ p {
   background-size: cover;
   background-position: center center;
 }
-
 #hero a {
   display: flex;
   font-size: 1.5em;
@@ -83,7 +81,7 @@ p {
   margin: 15px;
   padding: 10px 20px;
   color: #FFFFFF;
-  background-color: red;
+  background-color: #FF0000;
   text-decoration: none;
   box-shadow: 3px 3px 3px #808080;
   border-radius: 7px;
@@ -96,7 +94,6 @@ p {
 .texto {
   text-align: center;
 }
-
 .texto p {
   text-align: left;
   margin-top: 15px;
@@ -117,7 +114,6 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
   width: 100%;
   height: 150px;
 }
@@ -132,7 +128,6 @@ p {
   grid-gap: 20px;
   padding: 0px;
 }
-
 #carta ul {
   list-style: none;
   padding-left: 0;
@@ -215,7 +210,6 @@ p {
   margin: 0;
   padding: 25px;
 }
-
 #galeria img {
   width: 100%;
   height: 250px;
@@ -244,7 +238,6 @@ p {
   justify-content: center;
   margin: 3%;
 }
-
 #historia img {
   width: 90%;
 }/*# sourceMappingURL=style.css.map */
