--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,85 +1,71 @@
-.h2-menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 150px;
+.wrap {
+    max-width: 1200px;
+    margin: 0 auto;
+    h2 {
+        margin: 50px;
+        text-align: center;
+    }
+    .column-2.carta {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 1rem;
+        row-gap: 1rem;
+    }
+    .plato-carta {
+        display: flex;
+        align-items: center;
+        border: 1px solid $color3;
+        height: 9.5rem;
+        transition: 1s;
+        -webkit-transition: 1s;
+        -moz-transition: 1s;
+        -ms-transition: 1s;
+        -o-transition: 1s;
+}
+    .plato-carta:hover {
+        background: #FFAF43;
+        transform: scale(1.04);
+        -webkit-transform: scale(1.04);
+        -moz-transform: scale(1.04);
+        -ms-transform: scale(1.04);
+        -o-transform: scale(1.04);
+    }
+    .img-plato-carta {
+        display: flex;
+        flex-basis: 25%;
+        justify-content: center;
+        img {
+            max-width: 125px;
+            max-height: 90px;
+        }
+    }
+    .title-plato-carta {
+        border: 1px solid $color3;
+        border-bottom: none;
+        border-top: none;
+        flex-basis: 60%;
+        padding: 0 1rem;
+        h4 {
+            font-size: 25px;                   
+        }        
+        p {
+            margin: 0;
+            font-size: 15px;
+        }
+    }
+    .precio-plato-carta {
+        display: flex;
+        flex-basis: 15%;
+        justify-content: center;
+        font-weight: bold;
+    }
 }
 
-#carta {
-    height: auto;
-    width: 100%;    
-    display: grid;    
-    justify-items: center;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 250px);  
-    grid-gap: 20px;
-    padding: 0px;
-    ul {
-        list-style: none;
-        padding-left: 0;
-        margin-top: 5px;
+@media only screen and (max-width:680px){
+    .wrap {
+        padding: 20px;
     }
-}
-
-.menu {
-    display: flex;
-    width: 90%;
-    max-width: 400px;
-    flex-direction: column;
-    text-align: center;    
-    background-image: url(./fotos/fondo.jpg);
-    background-position: center;
-    background-size: cover;
-    border: 2px solid $color3;
-    @include cajas;
-}
-
-.text-menu {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    margin: 4%;
-}
-
-@media only screen and (min-width: 768px) {
-    #carta {
-        height: auto;
-        width: 100%;    
-        display: grid;    
-        justify-items: center;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(2, 250px);  
-        grid-gap: 40px;
-        padding: 0px;
-    }
-    
-    .menu:hover {
-        transform: scale(1.10);
-        transition: all 0.7s ease-in-out;
-        -webkit-transition: all 0.7s ease-in-out;
-        -moz-transition: all 0.7s ease-in-out;
-        -ms-transition: all 0.7s ease-in-out;
-        -o-transition: all 0.7s ease-in-out;
-        -webkit-transform: scale(1.10);
-        -moz-transform: scale(1.10);
-        -ms-transform: scale(1.10);
-        -o-transform: scale(1.10);
-    }
-
-    .pizzas {
-        margin-left: 18%;
-    }
-
-    .bebidas {
-        margin-left: 18%;
-    }
-
-    .empanada {
-        margin-right: 18%;
-    }
-
-    .promos {
-        margin-right: 18%;
+    .wrap .column-2.carta{
+        grid-template-columns: repeat(1,1fr);
     }
 }
