--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   color: #000000;
   position: relative;
   min-height: 100vh;
-  background-color: rgba(208, 233, 232, 0.822);
+  background-color: #86d9ee;
 }
 
 h1 {
@@ -47,19 +47,19 @@ h1 {
 }
 
 h2 {
-  font-size: 40px;
-  font-family: "Rubik Bubbles", cursive;
+  font-size: 50px;
+  font-family: "Rubik Marker Hatch", cursive;
 }
 
 h3 {
-  font-size: 30px;
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 1.2;
+  font-family: "Lobster", cursive;
+  text-decoration: underline;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 p {
-  font-size: 17px;
+  font-size: 18px;
 }
 
 #hero {
@@ -111,89 +111,76 @@ p {
   -o-border-radius: 7px;
 }
 
-.h2-menu {
+.wrap {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.wrap h2 {
+  margin: 50px;
+  text-align: center;
+}
+.wrap .column-2.carta {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  row-gap: 1rem;
+}
+.wrap .plato-carta {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 150px;
+  border: 1px solid #000000;
+  height: 9.5rem;
+  transition: 1s;
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
 }
-
-#carta {
-  height: auto;
-  width: 100%;
-  display: grid;
-  justify-items: center;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, 250px);
-  grid-gap: 20px;
-  padding: 0px;
+.wrap .plato-carta:hover {
+  background: #FFAF43;
+  transform: scale(1.04);
+  -webkit-transform: scale(1.04);
+  -moz-transform: scale(1.04);
+  -ms-transform: scale(1.04);
+  -o-transform: scale(1.04);
 }
-#carta ul {
-  list-style: none;
-  padding-left: 0;
-  margin-top: 5px;
-}
-
-.menu {
+.wrap .img-plato-carta {
   display: flex;
-  width: 90%;
-  max-width: 400px;
-  flex-direction: column;
-  text-align: center;
-  background-image: url(./fotos/fondo.jpg);
-  background-position: center;
-  background-size: cover;
-  border: 2px solid #000000;
-  box-shadow: 3px 3px 3px #808080;
-  border-radius: 7px;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  -ms-border-radius: 7px;
-  -o-border-radius: 7px;
-}
-
-.text-menu {
-  display: flex;
-  text-align: center;
+  flex-basis: 25%;
   justify-content: center;
-  margin: 4%;
+}
+.wrap .img-plato-carta img {
+  max-width: 125px;
+  max-height: 90px;
+}
+.wrap .title-plato-carta {
+  border: 1px solid #000000;
+  border-bottom: none;
+  border-top: none;
+  flex-basis: 60%;
+  padding: 0 1rem;
+}
+.wrap .title-plato-carta h4 {
+  font-size: 25px;
+}
+.wrap .title-plato-carta p {
+  margin: 0;
+  font-size: 15px;
+}
+.wrap .precio-plato-carta {
+  display: flex;
+  flex-basis: 15%;
+  justify-content: center;
+  font-weight: bold;
 }
 
-@media only screen and (min-width: 768px) {
-  #carta {
-    height: auto;
-    width: 100%;
-    display: grid;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(2, 250px);
-    grid-gap: 40px;
-    padding: 0px;
+@media only screen and (max-width: 680px) {
+  .wrap {
+    padding: 20px;
   }
-  .menu:hover {
-    transform: scale(1.1);
-    transition: all 0.7s ease-in-out;
-    -webkit-transition: all 0.7s ease-in-out;
-    -moz-transition: all 0.7s ease-in-out;
-    -ms-transition: all 0.7s ease-in-out;
-    -o-transition: all 0.7s ease-in-out;
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-  }
-  .pizzas {
-    margin-left: 18%;
-  }
-  .bebidas {
-    margin-left: 18%;
-  }
-  .empanada {
-    margin-right: 18%;
-  }
-  .promos {
-    margin-right: 18%;
+  .wrap .column-2.carta {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 .h2-contacto {
@@ -221,6 +208,9 @@ p {
   -moz-border-radius: 7px;
   -ms-border-radius: 7px;
   -o-border-radius: 7px;
+}
+#galeria .titulo-galeria {
+  margin: 50px;
 }
 
 @media only screen and (min-width: 768px) {
